--- a/jenkinsfile
+++ b/jenkinsfile
@@ -31,7 +31,8 @@ pipeline {
         }
         stage('deploy') {
                                              steps {
-                                                 sh "rm -rf docker-jenkins-build
+                                                 sh '''#!/bin/sh
+                                                     rm -rf docker-jenkins-build
                                                      mkdir docker-jenkins-build
                                                      cd docker-jenkins-build
                                                      cp /var/lib/jenkins/workspace/gal/target/Gal-0.0.1-SNAPSHOT.jar .
@@ -41,7 +42,8 @@ pipeline {
                                                      echo "CMD "catalina.sh" "run"" >> dockerfile
                                                      echo "EXPOSE 8080" >> dockerfile
                                                      sudo docker build -t mydockerimage:$BUILD_NUMBER .
-                                                     sudo docker run -itd --name=mydockercontainer-$BUILD_NUMBER -P mydockerimage:$BUILD_NUMBER"
+                                                     sudo docker run -itd --name=mydockercontainer-$BUILD_NUMBER -P mydockerimage:$BUILD_NUMBER
+                                                     '''
                                              }
                 }
     }
